[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/SpriteSheets/Torch.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Torch.gd" type="Script" id=2]
[ext_resource path="res://Assets/light.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "flame",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 16.75 )

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( -4, -12, -4, 1, 4, 1, 4, -12 )

[sub_resource type="CircleShape2D" id=13]
radius = 71.007

[node name="Torch" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
z_index = 1
frames = SubResource( 9 )
animation = "flame"
frame = 7
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 6.25 )
shape = SubResource( 11 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 3 )
texture_scale = 2.0
color = Color( 1, 0.654902, 0, 1 )
energy = 1.5
shadow_enabled = true
shadow_gradient_length = 20.0
shadow_filter = 1

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 13 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
